header added, and part 1 on top styled

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,50 @@
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
   <body>
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <div class="wrapper">
+      <header class="header">
+        <div class="header__container _container">
+          <div class="header__top">
+            <div class="header__functionality">
+              <a href="#" class="header__logo">
+                <img 
+                  class="header__logo-image" 
+                  src="./images/header/logo.png" 
+                  alt="header-logo"
+                >
+              </a>
+              <div class="header__lang-switch">En</div>
+            </div>
+            <nav class="header__nav">
+              <ul class="header__list list-header">
+                <li class="list-header__item">
+                  <a href="#" class="list-header__link">
+                    About
+                  </a>
+                </li>
+                <li class="list-header__item">
+                  <a href="#" class="list-header__link">
+                    Tech
+                  </a>
+                </li>
+                <li class="list-header__item">
+                  <a href="#" class="list-header__link">
+                    Benefits
+                  </a>
+                </li>
+                <li class="list-header__item">
+                  <a href="#" class="list-header__link">
+                    Contact
+                  </a>
+                </li>
+              </ul>
+              <button class="header__button button">Buy Now</button>
+            </nav>
+          </div>
+          <div class="header__content"></div>
+          <div class="header__bottom"></div>
+        </div>
+      </header>
+    </div>
   </body>
 </html>
