--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,32 @@
               <button class="header__button button">Buy Now</button>
             </nav>
           </div>
-          <div class="header__content"></div>
+          <div class="header__content">
+            <img
+              src="./images/header/background.png" 
+              alt="Header background image" 
+              class="header__background-image"
+            >
+            <div class="header__content-wrapper">
+              <h1 class="header__title">
+                THE NEW START OF <br>
+                <span class="header__span">VR LOCOMOTION</span>
+              </h1>
+              <p class="header__text">
+                Discover the most comprehensive VR Locomotion system,
+                and unlock infinite motion in any games on any platforms!
+              </p>
+              <div class="header__cost">1200$</div>
+              <div class="header__play-button play-button">
+                <img 
+                    class="play-button__image" 
+                    src="./images/header/play-button.svg"
+                    alt="Play button image"
+                >
+                <div class="play-button__text">Play Video</div>
+              </div>
+            </div>
+          </div>
           <div class="header__bottom"></div>
         </div>
       </header>
