--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,19 @@
               </div>
             </div>
           </div>
-          <div class="header__bottom"></div>
+          <div class="header__bottom">
+            <div class="header__faq-and-help">
+              <a href="#" class="header__faq">FAQ</a>
+              <a href="#" class="header__help">Help</a>
+            </div>
+            <div class="header__more">More</div>
+            <div class="header__slider slider-header">
+              <div class="slider-header__previous">Previous</div>
+              <div class="slider-header__next">Next</div>
+              <div class="slider-header__border-grey"></div>
+              <div class="slider-header__border-blue"></div>
+            </div>
+          </div>
         </div>
       </header>
     </div>
