more than gaming section builded

--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,59 @@
           </div>
         </div>
       </header>
+      <main class="page">
+        <section class="page__adventages adventages">
+          <div class="adventages__container _container">
+            <h2 class="adventages__title section-title-centred">MORE THAN <span>GAMING</span></h2>
+            <div class="adventages__subtitle text-2">This also made for people who are interested in...</div>
+            <ul class="adventages__list">
+              <li class="adventages__adventage adventage">
+                <picture class="adventage__icon">
+                  <img src="./images/adventages/01.svg" alt="Advantage icon">
+                </picture>
+                <h3 class="adventage__title">EDUCATION</h3>
+                <p class="adventage__text text-1">
+                  Create aducational simulations,
+                  trainings and much more with unlimited
+                  virtual space and minimum physical space
+                </p>
+              </li>
+              <li class="adventages__adventage adventage">
+                <picture class="adventage__icon">
+                  <img src="./images/adventages/02.svg" alt="Advantage icon">
+                </picture>
+                <h3 class="adventage__title">REAL ESTATE</h3>
+                <p class="adventage__text text-1">
+                  Desighn architectural projects in a deeply realistic environment
+                  allowing visitors to freely walk around, 
+                  and feel their vibe
+                </p>
+              </li>
+              <li class="adventages__adventage adventage">
+                <picture class="adventage__icon">
+                  <img src="./images/adventages/03.svg" alt="Advantage icon">
+                </picture>
+                <h3 class="adventage__title">FITNESS</h3>
+                <p class="adventage__text text-1">
+                  Combine business with pleasure,
+                  and discover countless ways to stay fit while playing your
+                  favorite VR Games!
+                </p>
+              </li>
+              <li class="adventages__adventage adventage">
+                <picture class="adventage__icon">
+                  <img src="./images/adventages/04.svg" alt="Advantage icon">
+                </picture>
+                <h3 class="adventage__title">SOCIAL INTERACTIONS</h3>
+                <p class="adventage__text text-1">
+                  Hang out with your friends in the virtual world when you 
+                  can’t meet space requirements
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
