section adventages adaptived

--- a/src/index.html
+++ b/src/index.html
@@ -105,6 +105,11 @@
             <ul class="adventages__list">
               <li class="adventages__adventage adventage">
                 <picture class="adventage__icon">
+                  <source 
+                    srcset="./images/adventages/01-small.svg"
+                    media="(max-width: 768px)"
+                    type="image/svg+xml"
+                  >
                   <img src="./images/adventages/01.svg" alt="Advantage icon">
                 </picture>
                 <h3 class="adventage__title">EDUCATION</h3>
@@ -116,6 +121,11 @@
               </li>
               <li class="adventages__adventage adventage">
                 <picture class="adventage__icon">
+                  <source 
+                    srcset="./images/adventages/02-small.svg"
+                    media="(max-width: 768px)"
+                    type="image/svg+xml"
+                  >
                   <img src="./images/adventages/02.svg" alt="Advantage icon">
                 </picture>
                 <h3 class="adventage__title">REAL ESTATE</h3>
@@ -127,6 +137,11 @@
               </li>
               <li class="adventages__adventage adventage">
                 <picture class="adventage__icon">
+                  <source 
+                    srcset="./images/adventages/03-small.svg"
+                    media="(max-width: 768px)"
+                    type="image/svg+xml"
+                  >
                   <img src="./images/adventages/03.svg" alt="Advantage icon">
                 </picture>
                 <h3 class="adventage__title">FITNESS</h3>
@@ -138,6 +153,11 @@
               </li>
               <li class="adventages__adventage adventage">
                 <picture class="adventage__icon">
+                  <source 
+                    srcset="./images/adventages/04-small.svg"
+                    media="(max-width: 768px)"
+                    type="image/svg+xml"
+                  >
                   <img src="./images/adventages/04.svg" alt="Advantage icon">
                 </picture>
                 <h3 class="adventage__title">SOCIAL INTERACTIONS</h3>
