top block of aboutus builded (1 part of aboutus)

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
                 THE NEW START OF <br>
                 <span class="header__span">VR LOCOMOTION</span>
               </h1>
-              <p class="header__text">
+              <p class="header__text text-1">
                 Discover the most comprehensive VR Locomotion system,
                 and unlock infinite motion in any games on any platforms!
               </p>
@@ -88,11 +88,11 @@
               <a href="#" class="header__help">Help</a>
             </div>
             <div class="header__more">More</div>
-            <div class="header__slider slider-header">
-              <div class="slider-header__previous">Previous</div>
-              <div class="slider-header__next">Next</div>
-              <div class="slider-header__border-grey"></div>
-              <div class="slider-header__border-blue"></div>
+            <div class="header__slider slider">
+              <div class="slider__previous">Previous</div>
+              <div class="slider__next">Next</div>
+              <div class="slider__border-grey"></div>
+              <div class="slider__border-blue"></div>
             </div>
           </div>
         </div>
@@ -167,6 +167,45 @@
                 </p>
               </li>
             </ul>
+          </div>
+        </section>
+        <section class="page__aboutus aboutus">
+          <div class="aboutus__container _container">
+            <div class="aboutus__top top-aboutus">
+              <div class="top-aboutus__video-box">
+                <div class="top-aboutus__series-count">1/5</div>
+                <picture>
+                  <img 
+                    src="./images/aboutus/video-1920.png" 
+                    alt="Video about us"
+                    class="top-aboutus__video"
+                  >
+                </picture>
+                <div class="top-aboutus__slider top-aboutus-slider">
+                  <div class="top-aboutus-slider__previous">Previous</div>
+                  <div class="top-aboutus-slider__next">Next</div>
+                  <div class="top-aboutus-slider__border-grey"></div>
+                  <div class="top-aboutus-slider__border-blue"></div>
+                </div>
+              </div>
+              <div class="top-aboutus__content-box">
+                <h2 class="top-aboutus__title section-title">ABOUT <span>PRODUCT</span></h2>
+                <p class="top-aboutus__text text-1">
+                  KAT loco is a foot-based VR locomotion system that gives complete physical control over lower-body actions,
+                  allowing you to freely walk, run,
+                  and carry out just any other movement in virtual reality.
+                </p>
+                <div class="top-aboutus__play-button play-button">
+                  <img 
+                      class="play-button__image" 
+                      src="./images/header/play-button.svg"
+                      alt="Play button image"
+                  >
+                  <div class="play-button__text">Play Video</div>
+                </div>
+              </div>
+            </div>
+            <div class="aboutus__bottom"></div>
           </div>
         </section>
       </main>
