"about us" section adapted for tablet devices

--- a/src/index.html
+++ b/src/index.html
@@ -175,6 +175,11 @@
               <div class="top-aboutus__video-box">
                 <div class="top-aboutus__series-count">1/5</div>
                 <picture>
+                  <source 
+                    srcset="./images/aboutus/video-768.png" 
+                    type="image/png" 
+                    media="(max-width: 1000px)"
+                  >
                   <img 
                     src="./images/aboutus/video-1920.png" 
                     alt="Video about us"
@@ -186,6 +191,13 @@
                   <div class="top-aboutus-slider__next">Next</div>
                   <div class="top-aboutus-slider__border-grey"></div>
                   <div class="top-aboutus-slider__border-blue"></div>
+                </div>
+                <div class="top-aboutus__dotted-slider top-aboutus-dotted-slider">
+                  <div class="top-aboutus-dotted-slider__dot top-aboutus-dotted-slider__dot--active"></div>
+                  <div class="top-aboutus-dotted-slider__dot"></div>
+                  <div class="top-aboutus-dotted-slider__dot"></div>
+                  <div class="top-aboutus-dotted-slider__dot"></div>
+                  <div class="top-aboutus-dotted-slider__dot"></div>
                 </div>
               </div>
               <div class="top-aboutus__content-box">
@@ -205,7 +217,28 @@
                 </div>
               </div>
             </div>
-            <div class="aboutus__bottom"></div>
+            <div class="aboutus__bottom bottom-aboutus">
+              <div class="bottom-aboutus__content">
+                <div class="bottom-aboutus__sub-title">Hello!</div>
+                <h2 class="bottom-aboutus__title section-title-custom">NICE TO MEET <span>YOU!</span></h2>
+                <p class="bottom-aboutus__text text-1">
+                  KAT VR is an independent company dedicated to the research, development,
+                  and sales of VR Locomotion products and solutions. Founded in 2013, 
+                  we have quickly grown to become one of the world’s leading professional suppliers of VR games’ & simulations’ equipment
+                </p>
+              </div>
+              <div class="bottom-aboutus__decorations decorations-bottom-aboutus">
+                <ul class="decorations-bottom-aboutus__list">
+                  <li class="decorations-bottom-aboutus__item"><span>A</span>BOUT US</li>
+                  <li class="decorations-bottom-aboutus__item"><span>A</span>BOUT US</li>
+                  <li class="decorations-bottom-aboutus__item"><span>A</span>BOUT US</li>
+                  <li class="decorations-bottom-aboutus__item"><span>A</span>BOUT US</li>
+                  <li class="decorations-bottom-aboutus__item"><span>A</span>BOUT US</li>
+                  <li class="decorations-bottom-aboutus__item"><span>A</span>BOUT US</li>
+                  <li class="decorations-bottom-aboutus__item"><span>A</span>BOUT US</li>
+                </ul>
+              </div>
+            </div>
           </div>
         </section>
       </main>
