section about us adapted for all resolutions

--- a/src/index.html
+++ b/src/index.html
@@ -176,6 +176,11 @@
                 <div class="top-aboutus__series-count">1/5</div>
                 <picture>
                   <source 
+                    srcset="./images/aboutus/video-320.png" 
+                    type="image/png" 
+                    media="(max-width: 600px)"
+                  >
+                  <source 
                     srcset="./images/aboutus/video-768.png" 
                     type="image/png" 
                     media="(max-width: 1000px)"
