section "features" builded for 1920 desktop resols

--- a/src/index.html
+++ b/src/index.html
@@ -56,7 +56,7 @@
                 type="image/png" 
                 media="(max-width: 430px)"
               >
-              <img
+              <img 
                 src="./images/header/background.png" 
                 alt="Header background image" 
                 class="header__background-image"
@@ -74,9 +74,9 @@
               <div class="header__cost">1200$</div>
               <div class="header__play-button play-button">
                 <img 
-                    class="play-button__image" 
-                    src="./images/header/play-button.svg"
-                    alt="Play button image"
+                  class="play-button__image" 
+                  src="./images/header/play-button.svg" 
+                  alt="Play button image"
                 >
                 <div class="play-button__text">Play Video</div>
               </div>
@@ -106,8 +106,8 @@
               <li class="adventages__adventage adventage">
                 <picture class="adventage__icon">
                   <source 
-                    srcset="./images/adventages/01-small.svg"
-                    media="(max-width: 768px)"
+                    srcset="./images/adventages/01-small.svg" 
+                    media="(max-width: 768px)" 
                     type="image/svg+xml"
                   >
                   <img src="./images/adventages/01.svg" alt="Advantage icon">
@@ -122,8 +122,8 @@
               <li class="adventages__adventage adventage">
                 <picture class="adventage__icon">
                   <source 
-                    srcset="./images/adventages/02-small.svg"
-                    media="(max-width: 768px)"
+                    srcset="./images/adventages/02-small.svg" 
+                    media="(max-width: 768px)" 
                     type="image/svg+xml"
                   >
                   <img src="./images/adventages/02.svg" alt="Advantage icon">
@@ -131,15 +131,15 @@
                 <h3 class="adventage__title">REAL ESTATE</h3>
                 <p class="adventage__text text-1">
                   Desighn architectural projects in a deeply realistic environment
-                  allowing visitors to freely walk around, 
+                  allowing visitors to freely walk around,
                   and feel their vibe
                 </p>
               </li>
               <li class="adventages__adventage adventage">
                 <picture class="adventage__icon">
                   <source 
-                    srcset="./images/adventages/03-small.svg"
-                    media="(max-width: 768px)"
+                    srcset="./images/adventages/03-small.svg" 
+                    media="(max-width: 768px)" 
                     type="image/svg+xml"
                   >
                   <img src="./images/adventages/03.svg" alt="Advantage icon">
@@ -154,15 +154,15 @@
               <li class="adventages__adventage adventage">
                 <picture class="adventage__icon">
                   <source 
-                    srcset="./images/adventages/04-small.svg"
-                    media="(max-width: 768px)"
+                    srcset="./images/adventages/04-small.svg" 
+                    media="(max-width: 768px)" 
                     type="image/svg+xml"
                   >
                   <img src="./images/adventages/04.svg" alt="Advantage icon">
                 </picture>
                 <h3 class="adventage__title">SOCIAL INTERACTIONS</h3>
                 <p class="adventage__text text-1">
-                  Hang out with your friends in the virtual world when you 
+                  Hang out with your friends in the virtual world when you
                   can’t meet space requirements
                 </p>
               </li>
@@ -187,7 +187,7 @@
                   >
                   <img 
                     src="./images/aboutus/video-1920.png" 
-                    alt="Video about us"
+                    alt="Video about us" 
                     class="top-aboutus__video"
                   >
                 </picture>
@@ -208,15 +208,16 @@
               <div class="top-aboutus__content-box">
                 <h2 class="top-aboutus__title section-title">ABOUT <span>PRODUCT</span></h2>
                 <p class="top-aboutus__text text-1">
-                  KAT loco is a foot-based VR locomotion system that gives complete physical control over lower-body actions,
+                  KAT loco is a foot-based VR locomotion system that gives complete physical control over lower-body
+                  actions,
                   allowing you to freely walk, run,
                   and carry out just any other movement in virtual reality.
                 </p>
                 <div class="top-aboutus__play-button play-button">
                   <img 
-                      class="play-button__image" 
-                      src="./images/header/play-button.svg"
-                      alt="Play button image"
+                    class="play-button__image"
+                    src="./images/header/play-button.svg" 
+                    alt="Play button image"
                   >
                   <div class="play-button__text">Play Video</div>
                 </div>
@@ -228,8 +229,9 @@
                 <h2 class="bottom-aboutus__title section-title-custom">NICE TO MEET <span>YOU!</span></h2>
                 <p class="bottom-aboutus__text text-1">
                   KAT VR is an independent company dedicated to the research, development,
-                  and sales of VR Locomotion products and solutions. Founded in 2013, 
-                  we have quickly grown to become one of the world’s leading professional suppliers of VR games’ & simulations’ equipment
+                  and sales of VR Locomotion products and solutions. Founded in 2013,
+                  we have quickly grown to become one of the world’s leading professional suppliers of VR games’ &
+                  simulations’ equipment
                 </p>
               </div>
               <div class="bottom-aboutus__decorations decorations-bottom-aboutus">
@@ -241,6 +243,51 @@
                   <li class="decorations-bottom-aboutus__item"><span>A</span>BOUT US</li>
                   <li class="decorations-bottom-aboutus__item"><span>A</span>BOUT US</li>
                   <li class="decorations-bottom-aboutus__item"><span>A</span>BOUT US</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="page__features features">
+          <div class="features__container _container">
+            <h2 class="features__title section-title-custom">TECH <span>SPECS</span></h2>
+            <div class="features__device">
+              <picture>
+                <img 
+                  src="./images/features/device-1920.png" 
+                  alt="Device image" 
+                  class="features__device-image"
+                >
+              </picture>
+              <div class="features__decorations">
+                <img src="./images/features/decorations/01.svg" alt="Decoration 1"
+                  class="features__decoration features__decoration--1">
+                <img src="./images/features/decorations/02.svg" alt="Decoration 2"
+                  class="features__decoration features__decoration--2">
+                <img src="./images/features/decorations/03.svg" alt="Decoration 3"
+                  class="features__decoration features__decoration--3">
+              </div>
+              <div class="features__specs">
+                <ul class="features__list list-features list-features--1">
+                  <h3 class="list-features__title">SENSOR</h3>
+                  <li class="list-features__item">Weight: 35g/1.23oz each</li>
+                  <li class="list-features__item">Dimension: 50mm/1.97in</li>
+                  <li class="list-features__item">24mm/0.94in</li>
+                  <li class="list-features__item">Light: LED lights</li>
+                </ul>
+                <ul class="features__list list-features list-features--2">
+                  <h3 class="list-features__title">CONNECTION</h3>
+                  <li class="list-features__item">Wireless: Bluetooth 4.2</li>
+                  <li class="list-features__item">Signal range: 5m</li>
+                  <li class="list-features__item">Receiver: USB 2.0 and above</li>
+                </ul>
+                <ul class="features__list list-features list-features--3">
+                  <h3 class="list-features__title">BATTERRIES</h3>
+                  <li class="list-features__item">Type: Lthium-lon polymer batteries</li>
+                  <li class="list-features__item">Capacity: 370mAh</li>
+                  <li class="list-features__item">Battery life: 10h of continuous use 150 hours on stand by</li>
+                  <li class="list-features__item">Charging: Fast charging - 1 hour</li>
+                  <li class="list-features__item">Charging voltage and current: 5V = 0.5A</li>
                 </ul>
               </div>
             </div>
