--- a/src/index.html
+++ b/src/index.html
@@ -253,6 +253,16 @@
             <h2 class="features__title section-title-custom">TECH <span>SPECS</span></h2>
             <div class="features__device">
               <picture>
+                <source
+                  srcset="./images/features/device-320.png"
+                  type="image/png"
+                  media="(max-width: 600px)"
+                >
+                <source
+                  srcset="./images/features/device-768.png"
+                  type="image/png"
+                  media="(max-width: 1100px)"
+                >
                 <img 
                   src="./images/features/device-1920.png" 
                   alt="Device image" 
@@ -260,12 +270,59 @@
                 >
               </picture>
               <div class="features__decorations">
-                <img src="./images/features/decorations/01.svg" alt="Decoration 1"
-                  class="features__decoration features__decoration--1">
-                <img src="./images/features/decorations/02.svg" alt="Decoration 2"
-                  class="features__decoration features__decoration--2">
-                <img src="./images/features/decorations/03.svg" alt="Decoration 3"
-                  class="features__decoration features__decoration--3">
+                <picture>
+                  <source
+                    srcset="./images/features/decorations/decoration-320.svg"
+                    media="(max-width: 600px)"
+                  >
+                  <source
+                    srcset="./images/features/decorations/decoration-768.svg"
+                    media="(max-width: 1100px)"
+                  >
+                  <img 
+                    src="./images/features/decorations/01.svg" 
+                    alt="Decoration 1"
+                    class="features__decoration features__decoration--1"
+                  >
+                </picture>
+                <picture>
+                  <source
+                    srcset="./images/features/decorations/decoration-320.svg"
+                    media="(max-width: 600px)"
+                  >
+                  <source
+                    srcset="./images/features/decorations/decoration-768.svg"
+                    media="(max-width: 1100px)"
+                  >
+                  <source
+                    srcset="./images/features/decorations/02-1280.svg"
+                    media="(max-width: 1280px)"
+                  >
+                  <img 
+                    src="./images/features/decorations/02.svg" 
+                    alt="Decoration 2"
+                    class="features__decoration features__decoration--2"
+                  >
+                </picture>
+                <picture>
+                  <source
+                    srcset="./images/features/decorations/decoration-320.svg"
+                    media="(max-width: 600px)"
+                  >
+                  <source
+                    srcset="./images/features/decorations/decoration-768.svg"
+                    media="(max-width: 1100px)"
+                  >
+                  <source
+                    srcset="./images/features/decorations/03-1280.svg"
+                    media="(max-width: 1280px)"
+                  >
+                  <img 
+                    src="./images/features/decorations/03.svg" 
+                    alt="Decoration 3"
+                    class="features__decoration features__decoration--3"
+                  >
+                </picture>
               </div>
               <div class="features__specs">
                 <ul class="features__list list-features list-features--1">
