--- a/src/index.html
+++ b/src/index.html
@@ -350,6 +350,71 @@
             </div>
           </div>
         </section>
+        <section class="page__whykatloco whykatloco">
+          <div class="whykatloco__container _container">
+            <h2 class="whykatloco__title section-title-centred">WHY <span>KAT LOCO?</span></h2>
+            <ul class="whykatloco__list list-whykatloco">
+              <li class="list-whykatloco__item item-whykatloco">
+                <picture>
+                  <source
+                    srcset="./images/whykatloco/icon-1_768.svg"
+                    media="(max-width: 768px)"
+                  >
+                  <img 
+                    src="./images/whykatloco/icon-1.svg" 
+                    alt="Why kat loco icon 1" 
+                    class="item-whykatloco__icon"
+                  >
+                </picture>
+                <h3 class="item-whykatloco__title">UNIVERSALLY COMPATIBLE</h3>
+                <p class="item-whykatloco__text text-1">
+                  KAT Loco offers universal compatibility 
+                  across all major VR headsets and platforms 
+                  allowing you to play any VR game with support for Free Locomotion
+                </p>
+              </li>
+              <li class="list-whykatloco__item item-whykatloco">
+                <picture>
+                  <source
+                    srcset="./images/whykatloco/icon-2_768.svg"
+                    media="(max-width: 768px)"
+                  >
+                  <img 
+                    src="./images/whykatloco/icon-2.svg" 
+                    alt="Why kat loco icon 2" 
+                    class="item-whykatloco__icon"
+                  >
+                </picture>
+                <h3 class="item-whykatloco__title">VR/PC CONTROL PANEL</h3>
+                <p class="item-whykatloco__text text-1">
+                  Our Multifunctional Software allows for quick access to KAT Loco’s 
+                  control panel both from a computer desktop, 
+                  and directly from your VR headset.
+                </p>
+              </li>
+              <li class="list-whykatloco__item item-whykatloco">
+                <picture>
+                  <source
+                    srcset="./images/whykatloco/icon-3_768.svg"
+                    media="(max-width: 768px)"
+                  >
+                  <img 
+                    src="./images/whykatloco/icon-3.svg" 
+                    alt="Why kat loco icon 4" 
+                    class="item-whykatloco__icon"
+                  >
+                </picture>
+                <h3 class="item-whykatloco__title">WIRELESS SENSORS</h3>
+                <p class="item-whykatloco__text text-1">
+                  What makes it even more advanced, 
+                  KAT Loco is entirely wireless, and comes with a complete system of algorithms,
+                   super durable batteries and more!
+                </p>
+              </li>
+            </ul>
+            <button class="whykatloco__button button">Buy Now</button>
+          </div>
+        </section>
       </main>
     </div>
   </body>
