added scroll up button (without functionality)

--- a/src/index.html
+++ b/src/index.html
@@ -460,6 +460,13 @@
                 placeholder="Message"></textarea>
               <button class="form-getintouch__button button" type="submit">Contact Us</button>
             </form>
+            <button class="scroll-up-button">
+              <img 
+                src="./images/to-top-button.svg" 
+                alt="Scroll up button"
+                class="scroll-up-button__image"
+              >
+            </button>
           </div>
         </section>
       </main>
