footer builded (not addapted)

--- a/src/index.html
+++ b/src/index.html
@@ -433,7 +433,7 @@
                   type="text" 
                   class="form-getintouch__name input" 
                   placeholder="&nbsp;"
-                  
+                  required
                 >
                 <span class="form-getintouch__span">Name*</span>
               </label>
@@ -442,6 +442,7 @@
                   type="email" 
                   class="form-getintouch__email input"
                   placeholder="&nbsp;"
+                  required
                 >
                 <span class="form-getintouch__span">Email*</span>
               </label>
@@ -450,6 +451,7 @@
                   type="number" 
                   class="form-getintouch__phone input"
                   placeholder="&nbsp;"
+                  required
                 >
                 <span class="form-getintouch__span">Phone*</span>
               </label>
@@ -470,6 +472,63 @@
           </div>
         </section>
       </main>
+      <footer class="footer">
+        <div class="footer__container _container">
+          <a href="#" class="footer__link">
+            <img 
+              src="./images/footer/logo-1920.png" 
+              alt="Footer logo" 
+              class="footer__logo"
+            >
+          </a>
+          <nav class="footer__nav navigation-footer">
+            <ul class="navigation-footer__list">
+              <li class="navigation-footer__item">
+                <a href="#" class="navigation-footer__link">About</a>
+              </li>
+              <li class="navigation-footer__item">
+                <a href="#" class="navigation-footer__link">Tech</a>
+              </li>
+              <li class="navigation-footer__item">
+                <a href="#" class="navigation-footer__link">Benefits</a>
+              </li>
+              <li class="navigation-footer__item">
+                <a href="#" class="navigation-footer__link">Contact</a>
+              </li>
+            </ul>
+          </nav>
+          <div class="footer__socials socials-footer">
+            <a href="https://www.facebook.com" class="socials-footer__link">
+              <img 
+                src="./images/footer/social/01.svg" 
+                alt="Facebook" 
+                class="socials-footer__image"
+              >
+            </a>
+            <a href="https://twitter.com/" class="socials-footer__link">
+              <img 
+                src="./images/footer/social/02.svg" 
+                alt="Twitter" 
+                class="socials-footer__image"
+              >
+            </a>
+            <a href="https://www.youtube.com" class="socials-footer__link">
+              <img 
+                src="./images/footer/social/03.svg" 
+                alt="Youtube" 
+                class="socials-footer__image"
+              >
+            </a>
+            <a href="https://www.reddit.com/" class="socials-footer__link">
+              <img 
+                src="./images/footer/social/02.svg" 
+                alt="Reddit" 
+                class="socials-footer__image"
+              >
+            </a>
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
