--- a/src/index.html
+++ b/src/index.html
@@ -475,11 +475,17 @@
       <footer class="footer">
         <div class="footer__container _container">
           <a href="#" class="footer__link">
-            <img 
-              src="./images/footer/logo-1920.png" 
-              alt="Footer logo" 
-              class="footer__logo"
-            >
+            <picture>
+              <source
+                srcset="./images/footer/logo-768.png"
+                media="(max-width: 768px)"
+              >
+              <img 
+                src="./images/footer/logo-1920.png" 
+                alt="Footer logo" 
+                class="footer__logo"
+              >
+            </picture>
           </a>
           <nav class="footer__nav navigation-footer">
             <ul class="navigation-footer__list">
@@ -499,33 +505,62 @@
           </nav>
           <div class="footer__socials socials-footer">
             <a href="https://www.facebook.com" class="socials-footer__link">
-              <img 
-                src="./images/footer/social/01.svg" 
-                alt="Facebook" 
-                class="socials-footer__image"
-              >
+              <picture>
+                <source
+                  srcset="./images/footer/social/01-768.svg"
+                  media="(max-width: 768px)"
+                >
+                <img 
+                  src="./images/footer/social/01.svg" 
+                  alt="Facebook" 
+                  class="socials-footer__image"
+                >
+              </picture>
             </a>
             <a href="https://twitter.com/" class="socials-footer__link">
-              <img 
-                src="./images/footer/social/02.svg" 
-                alt="Twitter" 
-                class="socials-footer__image"
-              >
+              <picture>
+                <source
+                  srcset="./images/footer/social/02-768.svg"
+                  media="(max-width: 768px)"
+                >
+                <img 
+                  src="./images/footer/social/02.svg" 
+                  alt="Twitter" 
+                  class="socials-footer__image"
+                >
+              </picture>
             </a>
             <a href="https://www.youtube.com" class="socials-footer__link">
-              <img 
-                src="./images/footer/social/03.svg" 
-                alt="Youtube" 
-                class="socials-footer__image"
-              >
+              <picture>
+                <source
+                  srcset="./images/footer/social/03-768.svg"
+                  media="(max-width: 768px)"
+                >
+                <img 
+                  src="./images/footer/social/03.svg" 
+                  alt="Youtube" 
+                  class="socials-footer__image"
+                >
+              </picture>
             </a>
             <a href="https://www.reddit.com/" class="socials-footer__link">
-              <img 
-                src="./images/footer/social/02.svg" 
-                alt="Reddit" 
-                class="socials-footer__image"
-              >
+              <picture>
+                <source
+                  srcset="./images/footer/social/04-768.svg"
+                  media="(max-width: 768px)"
+                >
+                <img 
+                  src="./images/footer/social/02.svg" 
+                  alt="Reddit" 
+                  class="socials-footer__image"
+                >
+              </picture>
             </a>
+          </div>
+          <div class="footer__contacts">
+            <a href="tel:86057186105373" class="footer__contact">+86-0571-86105373</a>
+            <a href="mailto:global@katvr.com" class="footer__contact">global@katvr.com</a>
+            <a href="mailto:overseas@katvr.com" class="footer__contact">overseas@katvr.com</a>
           </div>
         </div>
       </footer>
