--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Inter:100,regular,500,700,900" rel="stylesheet">
     <title>KAT VR</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <script src="index.js" defer></script>
   </head>
   <body>
     <div class="wrapper">
