added scroll-up-button id to scrollup button

--- a/src/index.html
+++ b/src/index.html
@@ -475,7 +475,7 @@
                 placeholder="Message"></textarea>
               <button class="form-getintouch__button button" type="submit">Contact Us</button>
             </form>
-            <button class="scroll-up-button">
+            <button class="scroll-up-button" id="scroll-up-button">
               <img 
                 src="./images/to-top-button.svg" 
                 alt="Scroll up button"
